# komari

./: .gitattributes  Cargo.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
backend/: Cargo.toml  build.rs
backend/proto/: input.proto
backend/src/: array.rs  bridge.rs  buff.rs  context.rs  database.rs  detect.rs  lib.rs  llm.rs  mat.rs  minimap.rs  network.rs  pathing.rs  request_handler.rs  rng.rs  rotator.rs  rpc.rs  skill.rs  task.rs
backend/src/player/: actions.rs  adjust.rs  cash_shop.rs  double_jump.rs  fall.rs  familiars_swap.rs  grapple.rs  idle.rs  mod.rs  moving.rs  panic.rs  solve_rune.rs  stall.rs  state.rs  timeout.rs  unstuck.rs  up_jump.rs  use_key.rs
docs/: customize_input.md  general.md  troubleshooting.md
examples/python/: input_pb2.py  input_pb2.pyi  input_pb2_grpc.py  kmbox_example.py  pywinauto_example.py
tools/: join.ps1  split.ps1
ui/: Cargo.toml  build.rs
ui/assets/: tailwind.css
ui/src/: action.rs  actions.rs  characters.rs  configuration.rs  familiar.rs  icons.rs  key.rs  main.rs  minimap.rs  platform.rs  rotation.rs  select.rs  settings.rs
ui/src/inputs/: keys.rs  mod.rs  numbers.rs
